# plux-rs

./: Cargo.toml  Makefile.toml  README.md
.github/workflows/: rust.yml
codegen/: Cargo.toml  README.md
codegen/src/: lib.rs
codegen/src/function/: generate_function.rs  generate_struct.rs  generator.rs  mod.rs  utils.rs  validator.rs
codegen/tests/: main.rs
examples/: README.md  basic_plugin.rs  benchmark.rs  cli_application.rs  custom_manager.rs  gui_application.rs  hot_reload.rs  parallel_plugins.rs  plugin_dependencies.rs  web_server_plugin.rs
examples/plugins/benchmark/plugin1-v1.0.0.lua/: config.toml  main.lua
examples/plugins/benchmark/plugin2-v1.0.0.lua/: main.lua
examples/plugins/benchmark/plugin3-v1.0.0.lua/: main.lua
examples/plugins/cli/help-v1.0.0.lua/: config.toml  main.lua
examples/plugins/cli/user_info-v1.0.0.lua/: config.toml  main.lua
examples/plugins/dependency/plugin_a-v1.0.0.lua/: config.toml  main.lua
examples/plugins/dependency/plugin_b-v1.0.0.lua/: config.toml  main.lua
examples/plugins/dependency/plugin_c-v1.0.0.lua/: config.toml  main.lua
examples/plugins/dependency/plugin_d-v1.0.0.lua/: config.toml  main.lua
examples/plugins/gui/dashboard-v1.0.0.lua/: config.toml  main.lua
examples/plugins/gui/system_info-v1.0.0.lua/: config.toml  main.lua
examples/plugins/gui/user_profile-v1.0.0.lua/: config.toml  main.lua
examples/plugins/hello-v1.0.0.lua/: main.lua
examples/plugins/hot_reload-v1.0.0.lua/: config.toml  main.lua
examples/plugins/parallel_one-v1.0.0.lua/: config.toml  main.lua
examples/plugins/parallel_two-v1.0.0.lua/: config.toml  main.lua
examples/plugins/web/admin_panel-v1.0.0.lua/: config.toml  main.lua
examples/plugins/web/dashboard-v1.0.0.lua/: config.toml  main.lua
examples/plugins/web/user_profile-v1.0.0.lua/: config.toml  main.lua
plugins/dependency/dep_2-v1.0.0.vpl/: config.toml
plugins/dependency/dep_3-v1.0.0.vpl/: config.toml
plugins/dependency/dep_4-v1.0.0.vpl/: config.toml
plugins/function_plugin-v1.0.0.fpl/: main.lua
plugins/function_plugin-v2.0.0.fpl/: main.lua
plugins/native_plugin/: Cargo.toml  Makefile.toml
plugins/native_plugin/native_plugin-v1.0.0.npl/: config.toml
plugins/parallel_plugins/one_plugin-v1.0.0.fpl/: config.toml
plugins/plugin_function/paint-v1.0.0.fpl/: main.lua
plugins/plugin_function/paint-v1.0.0.lua/: config.toml
plugins/plugin_function/square-v1.0.0.fpl/: main.lua
plugins/versions/paint-v1.0.0.vpl/: config.toml
src/: api.rs  bundle.rs  info.rs  lib.rs  loader.rs  manager.rs  plugin.rs
src/context/: load_plugin_context.rs  loader_context.rs  mod.rs  register_plugin_context.rs
src/function/: arg.rs  function.rs  macros.rs  mod.rs  request.rs
src/utils/: archive.rs  error.rs  mod.rs  ptr.rs
src/variable/: mod.rs  var.rs  var_type.rs
tests/: dependency.rs  function.rs  main.rs  version.rs
tests/bundles/: plugin_b-v1.0.0.vpl
tests/bundles/plugin_a-v1.0.0.vpl/: config.toml
tests/plugins/dependency/dep_1-v1.0.0.vpl/: config.toml
tests/plugins/function_plugin-v1.0.0.lua/: config.toml
tests/plugins/parallel_plugins/one_plugin-v1.0.0.lua/: main.lua
tests/plugins/parallel_plugins/two_plugin-v1.0.0.lua/: config.toml
tests/plugins/plugin_for_manager-v1.0.0.vpl/: config.toml
tests/plugins/plugin_function/circle-v1.0.0.lua/: config.toml  main.lua
tests/plugins/plugin_function/paint-v1.0.0.lua/: main.lua
tests/plugins/plugin_function/square-v1.0.0.lua/: config.toml
tests/plugins/versions/brush-v3.0.0.vpl/: config.toml
tests/plugins/versions/photoshop-v1.0.0.vpl/: config.toml
tests/plugins/void_plugin-v1.0.0.vpl/: config.toml
tests/utils/: config.rs  mod.rs
tests/utils/managers/: lua_manager.rs  mod.rs  void_manager.rs
tests/utils/managers/void_manager/: config.rs  mod.rs
