[package]
name = "plux-rs"
description = "A modular and performant plugin system for Rust applications, enabling secure and stable extension of functionality through external plugins."
version = "1.0.0"
authors = ["Bleyn"]
license = "MIT"
homepage = "https://github.com/BleynChannel/plux-rs"
repository = "https://github.com/BleynChannel/plux-rs"
readme = "README.md"
keywords = ["plugin", "modular", "extensibility", "dynamic-loading", "api"]
categories = ["api-bindings", "development-tools"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Utils
plux-codegen = { path = "codegen", version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
semver = { version = "1.0", features = ["serde"] }
thiserror = "2.0"

# Parallel
rayon = "1.11"

# Archive
walkdir = { version = "2.5", optional = true }
zip = { version = "5", optional = true }

[dev-dependencies]
plux-codegen = { path = "codegen", version = "0.2" }
plux-lua-manager = "0.1"
semver = { version = "1.0", features = ["serde"] }
toml = "0.9"
gethostname = "1.0"
egui = "0.32"
eframe = "0.32"

[features]
default = ["full"]
full = ["derive", "archive"]
derive = ["dep:plux-codegen"]
archive = ["dep:walkdir", "dep:zip"]
