[package]
name = "plux-codegen"
description = "A code generator for plux-rs"
version = "0.2.2"
authors = ["Bleyn"]
license = "MIT"
homepage = "https://github.com/BleynChannel/plux-rs"
repository = "https://github.com/BleynChannel/plux-rs"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.48", features = ["full"] }

[dev-dependencies]
plux-rs = { path = ".." }
